--- a/welcome/src/welcome.css
+++ b/welcome/src/welcome.css
@@ -1,8 +1,10 @@
 #welcome_panel {
 	min-width: 400px;
 	position: absolute;
-	right: 10px;
-	bottom: 10px;
+	top: 25%;
+	left: 30%;
+	/*right: 10px;*/
+	/*bottom: 10px;*/
 	color: black;
 }
 
@@ -11,5 +13,9 @@
 	width: 500px;
 	height: 400px;
 	overflow: auto;
+	text-align: left;
+	padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;	
 }
 
