--- a/base/css/base-style.css
+++ b/base/css/base-style.css
@@ -20,6 +20,8 @@
 	background: white;
 	border: 1px solid gray;
 	text-align: center;
+	width: 500px;
+    height: 350px;
 }
 
 .dialog-title {
@@ -38,6 +40,16 @@
 	margin: 5px;
 	width: 20px;
 	height: 20px;
+}
+
+.show-info-dialog_content{
+	width: 100%;
+    height: 350px;	
+}
+
+.show-info-dialog_content iframe{
+	width: 100%;
+    height: 350px;	
 }
 
 .dialog-modal {
