--- a/base/css/base-style.css
+++ b/base/css/base-style.css
@@ -42,14 +42,16 @@
 	height: 20px;
 }
 
-.show-info-dialog_content{
-	width: 100%;
-    height: 350px;	
-}
 
-.show-info-dialog_content iframe{
-	width: 100%;
-    height: 350px;	
+#show-info-dialog_content {
+	background-color: #fff;
+	width: 480px;
+    height: 290px;
+	overflow: hidden;
+	text-align: left;
+	padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;	
 }
 
 .dialog-modal {
