--- a/base/src/zoom-bar.css
+++ b/base/src/zoom-bar.css
@@ -1,32 +1,32 @@
 #zoom_to_max_extent {
 	background: url("images/ui-elements.png") no-repeat scroll 0
 		-80px transparent;
-	height: 25px;
-	left: 90px;
+	height: 30px;
+	right: 10px;
 	position: absolute;
-	top: 6px;
-	width: 25px;
+	bottom: 120px;
+	width: 30px;
 	z-index: 1000;
 }
 
 #zoom_out {
 	background: url("images/ui-elements.png") no-repeat scroll 0
 		-48px transparent;
-	height: 25px;
-	left: 10px;
+	height: 30px;
+	right: 10px;
 	position: absolute;
-	top: 6px;
-	width: 25px;
+	bottom: 80px;
+	width: 30px;
 	z-index: 1000;
 }
 
 #zoom_in {
 	background: url("images/ui-elements.png") no-repeat scroll 0
 		-16px transparent;
-	height: 25px;
-	left: 50px;
+	height: 30px;
+	right: 10px;
 	position: absolute;
-	top: 6px;
-	width: 25px;
+	bottom: 40px;
+	width: 30px;
 	z-index: 1000;
 }
