--- a/welcome/src/welcome.css
+++ b/welcome/src/welcome.css
@@ -10,9 +10,9 @@
 
 #welcome_panel_content {
 	background-color: #fff;
-	width: 500px;
-	height: 400px;
-	overflow: auto;
+	width: 450px;
+    height: 290px;
+	overflow: hidden;
 	text-align: left;
 	padding-top: 20px;
     padding-left: 10px;
