Modificado el campo downloadFile. Ahora acepta una string con el nombre del fichero que se va a descargar.

--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -80,7 +80,7 @@ td.layer_visibility {
 }
 
 .layer_download_button {
-  background: url("images/download.png") no-repeat scroll 0 -1px;
+  background: url("images/ui-elements.png") no-repeat scroll 0 -158px rgba(0, 0, 0, 0);
 }
 
 .layer_action_button {
@@ -91,15 +91,6 @@ td.layer_visibility {
   text-decoration: none;
   width: 16px;
   cursor: pointer;
-}
-
-.layer_stats_button {
-  background: url("images/object-indicators.png") no-repeat;
-  display: inline-block;
-  float: right;
-  padding: 0;
-  text-decoration: none;
-  width: 26px;
 }
 
 .ui-input-container>.layer_info_button {
