--- a/base/src/layer_stats_button.css
+++ b/base/src/layer_stats_button.css
@@ -1,5 +1,5 @@
 .layer_stats_button {
-    background: url("images/ui-elements.png") no-repeat scroll 0 -148px rgba(0, 0, 0, 0);
-    width: 19px;
-    height: 13px;
+    background: url(images/ui-elements.png) no-repeat scroll 0 -148px rgba(0, 0, 0, 0);
+    width: 25px;
+    height: 16px;
 }
