--- a/base/src/legend-button.css
+++ b/base/src/legend-button.css
@@ -3,7 +3,10 @@
 	top: 8px;
 	margin-right: 0px;
 	position: absolute;
-	width: 60px;
 	right: 20px;
-	margin-top: 0;
+	width: 30px;
+	height: 30px;
+	background-image: url(images/list-solid.png);
+	background-repeat: no-repeat;
+	background-position: center;
 }
