--- a/base/src/info-dialog.css
+++ b/base/src/info-dialog.css
@@ -35,6 +35,10 @@
     margin-right: 5px;
 }
 
+.info_dialog_allresults {
+	overflow-x: auto;
+}
+
 .info_dialog_results table {
     color: black;
 }
