--- a/layer-order/src/layer-order.css
+++ b/layer-order/src/layer-order.css
@@ -3,6 +3,11 @@
 	margin-left: 20px;
 }
 
+.layer-order-pane-content {
+    overflow: scroll;
+    height: 500px;
+}
+
 .layer-order-item {
 	padding: 7px;
     border: 1px dotted;
