Fix icon positions

--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -83,21 +83,22 @@ td.layer_visibility {
   background: url("images/download.png") no-repeat scroll 0 -1px;
 }
 
+.layer_temp_button {
+    background: url("images/clock.png") no-repeat;
+    width: 16px !important;
+    margin-right: 4px;
+}
+
 .layer_stats_button {
   background: url(images/ui-elements.png) no-repeat scroll 0 -148px rgba(0, 0, 0, 0);
-  width: 25px;
-  height: 16px;
+  width: 22px !important;
+  margin: 0px 2px;
 }
 
 .layer_metadata_button {
   background: url("images/metadata.png") no-repeat;
-  display: inline-block;
-  float: right;
-  height: 15px;
-  padding: 0;
-  text-decoration: none;
-  width: 19px;
-  cursor: pointer;
+  width: 18px !important;
+  margin: 0px 2px;
 }
 
 .layer_action_button {
