--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -91,7 +91,7 @@ td.layer_visibility {
 
 .layer_stats_button {
   background: url(images/ui-elements.png) no-repeat scroll 0 -148px rgba(0, 0, 0, 0);
-  width: 22px !important;
+  /* width: 22px !important; */
   margin: 0px 2px;
 }
 
@@ -112,7 +112,7 @@ td.layer_visibility {
 }
 
 .ui-input-container>.layer_info_button {
-  width: 20px;
+  display: block;
 }
 
 .layer-list-layer-container {
@@ -177,7 +177,7 @@ td.layer_visibility {
 .layer-list-accordion.accordion-content .layer-list-accordion-header {
   background: transparent;
   border: 0;
-  padding: 0px;
+  padding: 5px 0px;
 }
 
 .layer-list-accordion.accordion-content .layer-list-accordion.accordion-content {
@@ -203,5 +203,5 @@ td.layer_visibility {
 }
 
 .accordion-content .ui-input-container .editable-layer-list-button {
-  width: 20px;
+  width: 18px;
 }
