Fix all dialogs and forms broken
Flex display only for icons list

--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -110,7 +110,7 @@ td.layer_visibility {
   cursor: pointer;
 }
 
-.ui-input-container, .ui-text-area-field-container {
+.layer-list-accordion > .ui-input-container {
 	display: block;
 }
 
