Revert "Override CSS default positions for scalebar"
This reverts commit 8e8ba5bf623f94af063ea1e64ebc5cd156267fa0.

--- a/base/src/scale.css
+++ b/base/src/scale.css
@@ -1,6 +1,6 @@
 .olControlScale {
-	bottom: 0 !important;
-	right: 0 !important;
+	bottom: 0;
+	right: 0;
 	color: #fff;
 	padding: 0.6em;
 	background-color: #000;
