--- a/measure-tools/src/measure-tools.css
+++ b/measure-tools/src/measure-tools.css
@@ -1,21 +1,55 @@
 #toggle_measure_area {
-	background: url("images/area.png") no-repeat;
-	height: 30px;
-	right: 10px;
-	position: absolute;
-	bottom: 200px;
-	width: 30px;
+    background: url("images/area.png") no-repeat;
+    height: 30px;
+    right: 10px;
+    position: absolute;
+    bottom: 200px;
+    width: 30px;
     z-index: 1000;
     border-radius: 4px;
 }
 
 #toggle_measure_longitude {
-	background: url("images/ruler.png") no-repeat;
-	height: 30px;
-	right: 10px;
-	position: absolute;
-	bottom: 160px;
-	width: 30px;
+    background: url("images/ruler.png") no-repeat;
+    height: 30px;
+    right: 10px;
+    position: absolute;
+    bottom: 160px;
+    width: 30px;
     z-index: 1000;
     border-radius: 4px;
+}
+.ol-tooltip {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    color: white;
+    padding: 4px 8px;
+    opacity: 0.7;
+    white-space: nowrap;
+    font-size: 12px;
+    z-index: 2000;
+}
+.ol-tooltip-measure {
+    opacity: 1;
+    font-weight: bold;
+}
+.ol-tooltip-static {
+    background-color: #ffcc33;
+    color: black;
+    border: 1px solid white;
+}
+.ol-tooltip-measure:before,
+.ol-tooltip-static:before {
+    border-top: 6px solid rgba(0, 0, 0, 0.5);
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    margin-left: -7px;
+    left: 50%;
+}
+.ol-tooltip-static:before {
+    border-top-color: #ffcc33;
 }
