--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -13,6 +13,13 @@
   display: block;
 }
 
+#toggle_layers_button{
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  z-index: 750; /*to be on top of layer list and map */
+}
+
 #all_layers {
   position: relative;
   top: 0;
