Better button to hide layers

--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -16,7 +16,7 @@
 #toggle_layers_button{
   position: absolute;
   left: 10px;
-  bottom: 10px;
+  top: 0px;
   z-index: 750; /*to be on top of layer list and map */
 }
 
