--- a/base/css/base-style.css
+++ b/base/css/base-style.css
@@ -45,12 +45,12 @@
 #show-info-dialog_content {
 	background-color: #fff;
 	width: 480px;
-    height: 290px;
+	height: 290px;
 	overflow: hidden;
 	text-align: left;
 	padding-top: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .dialog-modal {
@@ -110,4 +110,12 @@
 
 .noUi-handle:after, .noUi-handle:before {
   content: none;
+}
+
+/* Landscape phones and down */
+@media (max-width: 620px) {
+	#show-info-dialog_content {
+		background-color: #fff;
+		width: 320px;
+	}
 }
