--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -18,6 +18,7 @@
   left: 10px;
   top: 0px;
   z-index: 750; /*to be on top of layer list and map */
+  background-color: #555555;
 }
 
 #all_layers {
